Changes in version 1.0-15 (xx/xx/2014) 
    * Seriation method 'Identity' added.
    * Seriation method 'Random' added.
    * Seriation method 'VAT' added.
    * Seriation method 'Spectral' added.
    * Seriation methods 'PCA_angle' and 'MDS_angle' added.
    * Several aliases for seriation methods added.
    * Criterion 'RWGAR' added.
    * get_rank for permutation vectors added.
    * seriation_dist and seriation_alignment to calculate 
      dissimilarities between seriation orders added.

Changes in version 1.0-14 (12/02/2014) 
    * arsa.f: removed 0 flag in rand() so it compiles under AIX 
      (reported by Lei Zhang)
    * arsa.f/bburg.f/bbwrg.f: calles now R RNG to be compartible with certain 
	    compilers (e.g., Intel FORTRAN) (reported by Rohan Shah)

Changes in version 1.0-13 (3/11/2014) 
    * Fixed dependence on MASS

Changes in version 1.0-12 (2/18/14)
    * ser_permutation_vectors can now be reversed with rev
    * get_order: removed the weird labels. 
    * we use now testthat
    * fixed bug with intra-cluster ordering using silhouette width 
	    (reported by Bettina Gruen)
    * Cleaned up dependencies: TSP, grid, cluster, gclus and colorspace are
	    now imports instead of dependencies.

Changes in version 1.0-11 (9/6/13)
    * service release.

Changes in version 1.0-10 (2/15/13)
    * pimage has now a colorkey and a range argument
    * fixed bug in ARSA when the distance matrix contains all 0s
    * added PACKAGE argument to .Fortran calls

Changes in version 1.0-8 and 1.0-9 (11/6/12)
    * get_order: labels are now in the correct order (Bug report by Crt Ahlin)
    * Replaced Fortran I/O with R I/O for verb=TRUE
    * Fixed pop/newpage bug in pimage.dist (reported by Bettina Gruen)

Changes in version 1.0-7 (9/25/12)
    * Fixed out-of-bounds bug in arsa.f (reported by Rohan Shah)
    * Fixed out-of-bounds bug in bburcg.f

Changes in version 1.0-6 (10/19/11)
    * removed deprecated parameter gamma for dissplot()
