@@ -311,7 +311,7 @@ seriate_dist_spectral <- function(x, control = NULL) {
   o
 }
 
-### FIXME!
+### FIXME?
 seriate_dist_spectral_norm <- function(x, control = NULL) {
   ### calculate normalized Laplacian
   A <- 1/(1+as.matrix(x))
@@ -325,6 +325,97 @@ seriate_dist_spectral_norm <- function(x, control = NULL) {
   #o <- order(q[,ncol(q)-1L])
   o <- order(q[,2L])
   #pimage(x, o)
+  names(o) <- names(x)[o]
+  o
+}
+
+## SPIN Neighborhood. Tsafrir et al. 2005
+
+## Weight matrix
+create_W <- function(n, sigma, verbose=FALSE) {
+  w <- function(i, j, n, sigma) exp(-1*(i-j)^2/n/sigma) 
+  W <- outer(1:n, 1:n, FUN = w, n=n, sigma=sigma)
+  
+  ## make doubly stochastic
+  for(i in 1:1000) {
+    #cat(i, ".")
+    W <- sweep(W, MARGIN = 1, STATS = rowSums(W), "/")
+    W <- sweep(W, MARGIN = 2, STATS = colSums(W), "/")
+    if(round(rowSums(W), 5) == 1 && round(colSums(W), 5) == 1) break
+  }
+  
+  if(verbose) cat("It took", i, "iterations to make W doubly stochastic!\n")
+  if(i >999) warning("Weight matrix did not converge to doubly stochastic in 1000 itermation!")
+  W 
+}
+
+
+seriate_dist_SPIN <- function(x, control = NULL) {
+  param <- list(
+    sigma = seq(20,1, length.out = 10),
+    step = 5,
+    verbose = FALSE
+  )
+  for(n in names(control)) {
+    i <- pmatch(n, names(param))
+    if(is.na(i))
+      stop(gettextf("Unknown control parameter '%s'.", n))
+    param[i] <- control[[n]]
+  }
+  
+  sigma <- param$sigma
+  step <- param$step
+  verbose <- param$verbose
+  
+  D <- as.matrix(x)
+  n <- nrow(D)
+  
+  ## weight matrix  
+  W <- W_orig <- create_W(n, sigma[1], verbose)
+  
+  energy_best <- Inf
+  
+  for(i in 1:(length(sigma)*step)) {
+    if(verbose) cat("Iteration", i, "... ")
+    
+    M <- D %*% W
+    
+    ## heuristic for the linear assignment problem
+    ## (second argument to order breakes ties randomly)
+    P <- permutation_vector2matrix(
+      order(apply(M, MARGIN = 1, which.min), sample(1:n)))
+    #if(verbose) print(table(apply(M, MARGIN = 1, which.min)))
+    
+    energy_new <- sum(diag(P %*% M))
+    if(verbose) cat("best energy:", energy_best, 
+      "new energy: ", energy_new, "\n")
+    
+    ## was energy improved?
+    if(energy_new < energy_best) { 
+      energy_best <- energy_new
+      P_best <- P
+    }
+    
+    ## adapt sigma
+    if(!(i %% step) && i != length(sigma)*step) {
+      s <- sigma[i/step+1]
+      if(verbose) cat("\nReducing sigma to:", s, "\n")
+      
+      W_orig <- create_W(n, s, verbose)
+    
+      
+      ## recalculate best energy
+      W <- crossprod(P, W_orig) ### t(P) %*% W
+      M <- D %*% W
+      energy_best <- sum(diag(P %*% M))
+      if(verbose) cat("best energy is now:", energy_best, "\n\n")
+    }else {
+      W_m <- crossprod(P, W_orig) ### t(P) %*% W
+    }
+  }
+  
+  if(verbose) cat("Best Energy:", energy_best, "\n")
+  o <- permutation_matrix2vector(P_best)
   names(o) <- names(x)[o]
   o
 }
@@ -380,3 +471,6 @@ set_seriation_method("dist", "Spectral", seriate_dist_spectral,
   "Spectral seriation")
 set_seriation_method("dist", "Spectral_norm", seriate_dist_spectral_norm,
   "Spectral seriation (normalized)")
+
+set_seriation_method("dist", "SPIN", seriate_dist_SPIN,
+  "SPIN (Neighborhood algorithm)")
