@@ -2,10 +2,12 @@ Changes in version 1.0-15 (xx/xx/2014)
     * Seriation method 'Identity' added.
     * Seriation method 'Random' added.
     * Seriation method 'VAT' added.
-    * Seriation method 'Spectral' added.
+    * Seriation methods 'Spectral' and 'Spectral_norm' added.
     * Seriation methods 'PCA_angle' and 'MDS_angle' added.
+    * Seriation method 'SPIN' added.
     * Several aliases for seriation methods added.
     * Criterion 'RWGAR' added.
+    * permutation_matrix2vector and permutation_vector2matrix added.
     * get_rank for permutation vectors added.
     * seriation_dist and seriation_alignment to calculate 
       dissimilarities between seriation orders added.
